--- a/README
+++ b/README
@@ -119,7 +119,7 @@ By default, the lobster is found at http://localhost:9292.
 
 == Installing with RubyGems
 
-A Gem of Rack is available at gemcutter.org.  You can install it with:
+A Gem of Rack is available at rubygems.org.  You can install it with:
 
     gem install rack
 
@@ -390,7 +390,7 @@ would like to thank:
 * Marcus Rückert, for help with configuring and debugging lighttpd.
 * The WSGI team for the well-done and documented work they've done and
   Rack builds up on.
-* All bug reporters and patch contributers not mentioned above.
+* All bug reporters and patch contributors not mentioned above.
 
 == Copyright
 
@@ -416,10 +416,10 @@ CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 == Links
 
 Rack:: <http://rack.rubyforge.org/>
-Rack's Rubyforge project:: <http://rubyforge.org/projects/rack>
 Official Rack repositories:: <http://github.com/rack>
-Rack Lighthouse Bug Tracking:: <http://rack.lighthouseapp.com/>
+Rack Bug Tracking:: <http://github.com/rack/rack/issues>
 rack-devel mailing list:: <http://groups.google.com/group/rack-devel>
+Rack's Rubyforge project:: <http://rubyforge.org/projects/rack>
 
 Christian Neukirchen:: <http://chneukirchen.org/>
 
