--- a/README.rdoc
+++ b/README.rdoc
@@ -365,6 +365,8 @@ The Rack Core Team, consisting of
 * Michael Fellinger (manveru)
 * Ryan Tomayko (rtomayko)
 * Scytrin dai Kinthra (scytrin)
+* Aaron Patterson (tenderlove)
+* Konstantin Haase (rkh)
 
 would like to thank:
 
