--- a/README.rdoc
+++ b/README.rdoc
@@ -341,6 +341,16 @@ run on port 11211) and memcache-client installed.
   * Pulled in relevant bug fixes from 1.3
   * Fixed 1.8.6 support
 
+* Not yet released: Fifteenth public release 1.3.1
+  * Fixed 1.9.1 support
+  * Fix a regression in Rack::Utils
+  * Properly handle $KCODE in Rack::Utils.escape
+  * Make method_missing/respond_to behavior consistent for Rack::Lock,
+    Rack::Auth::Digest::Request and Rack::Multipart::UploadedFile
+  * Reenable passing rack.session to session middleware
+  * Rack::CommonLogger handles streaming responses correctly
+  * Rack::MockResponse calls close on the body object
+
 == Contact
 
 Please post bugs, suggestions and patches to
