--- a/README.rdoc
+++ b/README.rdoc
@@ -342,8 +342,8 @@ run on port 11211) and memcache-client installed.
   * Fixed 1.8.6 support
 
 * Not yet released: Fifteenth public release 1.3.1
-  * Fixed 1.9.1 support
-  * Fix a regression in Rack::Utils
+  * Fix 1.9.1 support
+  * Fix JRuby support
   * Properly handle $KCODE in Rack::Utils.escape
   * Make method_missing/respond_to behavior consistent for Rack::Lock,
     Rack::Auth::Digest::Request and Rack::Multipart::UploadedFile
