--- a/README.rdoc
+++ b/README.rdoc
@@ -12,24 +12,27 @@ which all Rack applications should conform to.
 == Supported web servers
 
 The included *handlers* connect all kinds of web servers to Rack:
-* Mongrel
-* EventedMongrel
-* SwiftipliedMongrel
+* Mongrel[https://github.com/fauna/mongrel/]
+* EventedMongrel[http://swiftiply.swiftcore.org/mongrel.html]
+* SwiftipliedMongrel[http://swiftiply.swiftcore.org/mongrel.html]
 * WEBrick
 * FCGI
 * CGI
 * SCGI
-* LiteSpeed
-* Thin
+* LiteSpeed[http://www.litespeedtech.com/]
+* Thin[http://code.macournoyer.com/thin/]
 
 These web servers include Rack handlers in their distributions:
-* Ebb
-* Fuzed
-* Glassfish v3
-* Phusion Passenger (which is mod_rack for Apache and for nginx)
-* Rainbows!
-* Unicorn
-* Zbatery
+* ControlTower[http://www.macruby.org/blog/2010/09/20/announcing-control-tower.html]
+* Ebb[http://ebb.rubyforge.org/]
+* Glassfish[https://github.com/jruby/glassfish-gem]
+* {Phusion Passenger}[http://www.modrails.com/] (which is mod_rack for Apache[http://httpd.apache.org/] and for nginx[http://nginx.org/])
+* Pow[http://pow.cx/]
+* Rainbows![http://rainbows.rubyforge.org/]
+* TorqueBox[http://torquebox.org/]
+* Trinidad[https://github.com/trinidad/trinidad]
+* Unicorn[http://unicorn.bogomips.org/]
+* Zbatery[http://zbatery.bogomip.org/]
 
 Any valid Rack app will run the same on all these handlers, without
 changing anything.
