--- a/SPEC.rdoc
+++ b/SPEC.rdoc
@@ -165,7 +165,6 @@ transport the response.
 The Body commonly is an Array of Strings, the application
 instance itself, or a File-like object.
 == Thanks
-Some parts of this specification are adopted from PEP333: Python
-Web Server Gateway Interface
-v1.0 (http://www.python.org/dev/peps/pep-0333/). I'd like to thank
+Some parts of this specification are adopted from {http://www.python.org/dev/peps/pep-0333/ PEP333}:
+Python Web Server Gateway Interface v1.0. I'd like to thank
 everyone involved in that effort.
