--- a/README.rdoc
+++ b/README.rdoc
@@ -341,7 +341,7 @@ run on port 11211) and memcache-client installed.
   * Pulled in relevant bug fixes from 1.3
   * Fixed 1.8.6 support
 
-* Not yet released: Fifteenth public release 1.3.1
+* July 13, 2011: Fifteenth public release 1.3.1
   * Fix 1.9.1 support
   * Fix JRuby support
   * Properly handle $KCODE in Rack::Utils.escape
@@ -350,6 +350,7 @@ run on port 11211) and memcache-client installed.
   * Reenable passing rack.session to session middleware
   * Rack::CommonLogger handles streaming responses correctly
   * Rack::MockResponse calls close on the body object
+  * Fix a DOS vector from MRI stdlib backport
 
 * Not yet release: public release 1.4.0
   * Raise sane error messages for broken config.ru
