--- a/README.rdoc
+++ b/README.rdoc
@@ -352,6 +352,9 @@ run on port 11211) and memcache-client installed.
   * Rack::MockResponse calls close on the body object
   * Fix a DOS vector from MRI stdlib backport
 
+* July 16, 2011: Sixteenth public release 1.3.2
+  * Fix for Rails and rack-test, Rack::Utils#escape calls to_s
+
 * Not yet release: public release 1.4.0
   * Raise sane error messages for broken config.ru
   * Allow combining run and map in a config.ru
