--- a/README
+++ b/README
@@ -341,6 +341,9 @@ run on port 11211) and memcache-client installed.
   * Pulled in relevant bug fixes from 1.3
   * Fixed 1.8.6 support
 
+* September 16, 2011: Eighteenth public release 1.2.4
+  * Fix a bug with MRI regex engine to prevent XSS by malformed unicode
+
 == Contact
 
 Please post bugs, suggestions and patches to
