--- a/README.rdoc
+++ b/README.rdoc
@@ -364,13 +364,19 @@ run on port 11211) and memcache-client installed.
 * September 16, 2011: Eighteenth public release 1.2.4
   * Fix a bug with MRI regex engine to prevent XSS by malformed unicode
 
+* October 1, 2011: Eighteenth public release 1.3.4
+  * Backport security fix from 1.9.3, also fixes some roundtrip issues in URI
+  * Small documentation update
+  * Fix an issue where BodyProxy could cause an infinite recursion
+  * Add some supporting files for travis-ci
+
 * Not yet release: public release 1.4.0
   * Raise sane error messages for broken config.ru
   * Allow combining run and map in a config.ru
   * Rack::ContentType will not set Content-Type for responses without a body
   * Status code 205 does not send a response body
   * Rack::Response::Helpers will not rely on instance variables
-	* Rack::Utils.build_query no longer outputs '=' for nil query values
+  * Rack::Utils.build_query no longer outputs '=' for nil query values
 
 == Contact
 
