--- a/README.rdoc
+++ b/README.rdoc
@@ -361,7 +361,10 @@ run on port 11211) and memcache-client installed.
   * Prevents XSS attacks enabled by bug in Ruby 1.8's regexp engine
   * Rack::ConditionalGet handles broken If-Modified-Since helpers
 
-* October 1, 2011: Eighteenth public release 1.3.4
+* September 16, 2011: Eighteenth public release 1.2.4
+  * Fix a bug with MRI regex engine to prevent XSS by malformed unicode
+
+* October 1, 2011: Nineteenth public release 1.3.4
   * Backport security fix from 1.9.3, also fixes some roundtrip issues in URI
 	* Small documentation update
 	* Fix an issue where BodyProxy could cause an infinite recursion
