--- a/README.rdoc
+++ b/README.rdoc
@@ -374,6 +374,7 @@ run on port 11211) and memcache-client installed.
   * Fix annoying warnings caused by the backport in 1.3.4
 
 * Not yet release: public release 1.4.0
+  * Ruby 1.8.6 support has officially been dropped. Not all tests pass.
   * Raise sane error messages for broken config.ru
   * Allow combining run and map in a config.ru
   * Rack::ContentType will not set Content-Type for responses without a body
