--- a/README.rdoc
+++ b/README.rdoc
@@ -373,7 +373,7 @@ run on port 11211) and memcache-client installed.
 * October 17, 2011: Twentieth public release 1.3.5
   * Fix annoying warnings caused by the backport in 1.3.4
 
-* Not yet released: public release 1.4.0
+* December 28th, 2011: Twenty fourth public release 1.4.0
   * Ruby 1.8.6 support has officially been dropped. Not all tests pass.
   * Raise sane error messages for broken config.ru
   * Allow combining run and map in a config.ru
