--- a/README.rdoc
+++ b/README.rdoc
@@ -29,6 +29,7 @@ These web servers include Rack handlers in their distributions:
 * Phusion Passenger (which is mod_rack for Apache and for nginx)
 * Rainbows!
 * Unicorn
+* unixrack
 * Zbatery
 
 Any valid Rack app will run the same on all these handlers, without
