Adding Puma to list of web servers

--- a/README.rdoc
+++ b/README.rdoc
@@ -27,6 +27,7 @@ These web servers include Rack handlers in their distributions:
 * Fuzed
 * Glassfish v3
 * Phusion Passenger (which is mod_rack for Apache and for nginx)
+* Puma
 * Rainbows!
 * Unicorn
 * Zbatery
