--- a/README.rdoc
+++ b/README.rdoc
@@ -31,6 +31,7 @@ These web servers include Rack handlers in their distributions:
 * Rainbows!
 * Unicorn
 * unixrack
+* uWSGI
 * Zbatery
 
 Any valid Rack app will run the same on all these handlers, without
